test/testData/parser/negative/enums.err
test/testData/parser/negative/enums.c:1:4: error: use of empty enum
test/testData/parser/negative/enums.c:3:8: error: Expecting IDENTIFIER in enum list but found =
test/testData/parser/negative/enums.c:3:15: error: Expecting IDENTIFIER in enum list but found ,
test/testData/parser/negative/enums.c:3:16: error: Expecting IDENTIFIER in enum list but found ,
